personal-website/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
  namespace: personal-website
  labels:
    app: personal-website
spec:
  ports:
    - name: personal-website
      port: 80
  selector:
    app: personal-website
